cleanup dead code from skills section, fixed verticle alignment one education section

--- a/src/components/Education/style.css
+++ b/src/components/Education/style.css
@@ -2,6 +2,8 @@
   width: 42%;
   padding: 10px;
   font-size: 16px;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 
